poke/testsuite/poke.pkl/cond-exp-diag-2.pk
/* { dg-do compile } */

defvar i = 1 ? "foo" : [1,2,3]; /* { dg-error "\n.*exactly the same type" } */
